--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 <body>
     <div class="container"></div>
     <script type="text/javascript" src="./dist/app-browserify.js"></script>
+    <div class="header">
+        <div>
+            <img id="logo" src="./images/logo.png">
+            <span>HKhatri</span>
+        </div>
+        <div id="menu">
+            <pre class="tab" id="margin">Contact   </pre>
+            <pre class="tab">Portfolio</pre>
+            <pre class="tab">What I Do</pre>
+            <pre class="tab">About Me</pre>
+        </div>
+    </div>
+    <div id="background"></div>
+    <div class="footer"></div>
+    <div id="circle">
+    	<div id="wlogo"><img src="./images/logo.png"></div>
+    </div>
+    <div class="content">
+        <h1>Hannah Khatri</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.  </p>
+    </div>
 </body>
 
 </html>
