--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="content">
         <h1>Hannah Khatri</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempore.  </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.  </p>
     </div>
 </body>
 
